--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>七牛云端图片上传,可供微信评论留图</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="shortcut icon" href="minus.png">
 </head>
 <body>
 <div class="container-fluid">
