--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
             <table class="table table-hover" id="tableBox">
                 <thead>
-                    <tr>
-                        <th class="col-md-3 col-sm-3 col-xs-3">文件名</th>
-                        <th class="col-md-2 col-sm-2 hidden-xs">大小</th>
-                        <th class="col-md-7 col-sm-7 col-xs-9">详情</th>
-                    </tr>
+                <tr>
+                    <th class="col-md-3 col-sm-3 col-xs-3">文件名</th>
+                    <th class="col-md-2 col-sm-2 hidden-xs">大小</th>
+                    <th class="col-md-7 col-sm-7 col-xs-9">详情</th>
+                </tr>
                 </thead>
                 <tbody id="upfileTbody">
 
@@ -38,16 +38,17 @@
     </div>
 </div>
 
-
-<script src="js/jquery-2.1.4.min.js" ></script>
+<!--<script src="js/jquery-2.1.4.min.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/moxie.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/plupload.dev.js" ></script>-->
-<script type="text/javascript" src="js/sdk/plupload.full.min.js" ></script>
-<script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>
+<!--<script type="text/javascript" src="js/sdk/plupload.full.min.js" ></script>-->
+<!--<script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>-->
+<script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src="http://cdn.staticfile.org/plupload/3.1.0/plupload.min.js" ></script>
+<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/ui.js"></script>
 <script type="text/javascript">
-
 
 </script>
 </body>
