--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 <!--<script type="text/javascript" src="js/sdk/plupload/moxie.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/plupload.dev.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload.full.min.js" ></script>-->
-<!--<script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>-->
 <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.staticfile.org/plupload/3.1.0/plupload.min.js" ></script>
-<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>
+<!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>-->
+<script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/ui.js"></script>
 <script type="text/javascript">
