--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.staticfile.org/plupload/3.1.0/plupload.min.js" ></script>
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>-->
+<!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.map" ></script>-->
 <script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/ui.js"></script>
