--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
                 </tr>
                 </thead>
                 <tbody id="upfileTbody">
-
+                    <!--<tr>-->
+                        <!--<td>fjek.jpn</td>-->
+                        <!--<td>-->
+                            <!--<div class="progress">-->
+                                <!--<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">-->
+                                    <!--<span class="sr-only">45% Complete</span>-->
+                                <!--</div>-->
+                                <!--<span class="up-speed">已上传：1.3MB 上传速度:343KB/s</span>-->
+                            <!--</div>-->
+                        <!--</td>-->
+                    <!--</tr>-->
                 </tbody>
             </table>
         </div>
