--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="upload-box" id="upload_id">
                 <a class="btn btn-default btn-lg" href="#" id="pickfiles">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    <span>上传文件</span>
+                    <span>上传图片</span>
                 </a>
             </div>
         </div>
