--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="minus.png">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid min-height">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
             <div class="upload-box" id="upload_id">
@@ -44,10 +44,16 @@
                     <!--</tr>-->
                 </tbody>
             </table>
+            <div class="instruction">
+                <p><strong>说明:</strong> 路径最后的<mark>-m</mark>后缀表示压缩至最大宽度1024px，高度自适应以节省流量。需要查看原图，删除<mark>-m</mark>访问</p>
+            </div>
         </div>
     </div>
-</div>
 
+</div>
+<footer >
+    <p class="text-center sm-text"><small>xm.mrh🍓 </small></p>
+</footer>
 <!--<script src="js/jquery-2.1.4.min.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/moxie.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/plupload.dev.js" ></script>-->
@@ -59,8 +65,6 @@
 <script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/ui.js"></script>
-<script type="text/javascript">
 
-</script>
 </body>
 </html>
