--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>-->
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.map" ></script>-->
 <script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>
+<script type="text/javascript" src="js/base.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/ui.js"></script>
 
