--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>图片上传,微信评论留图</title>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/common.css">
     <link rel="shortcut icon" href="minus.png">
+    <style>
+        .wrap{
+            word-wrap: break-word;
+        }
+    </style>
 </head>
 <body>
 <div class="container-fluid min-height">
@@ -31,38 +37,58 @@
                 </tr>
                 </thead>
                 <tbody id="upfileTbody">
-                    <!--<tr>-->
-                        <!--<td>fjek.jpn</td>-->
-                        <!--<td>-->
-                            <!--<div class="progress">-->
-                                <!--<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">-->
-                                    <!--<span class="sr-only">45% Complete</span>-->
-                                <!--</div>-->
-                                <!--<span class="up-speed">已上传：1.3MB 上传速度:343KB/s</span>-->
-                            <!--</div>-->
-                        <!--</td>-->
-                    <!--</tr>-->
+                <!--<tr>-->
+                <!--<td>fjek.jpn</td>-->
+                <!--<td>-->
+                <!--<div class="progress">-->
+                <!--<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">-->
+                <!--<span class="sr-only">45% Complete</span>-->
+                <!--</div>-->
+                <!--<span class="up-speed">已上传：1.3MB 上传速度:343KB/s</span>-->
+                <!--</div>-->
+                <!--</td>-->
+                <!--</tr>-->
+                <tr id="o_1c0o2h25f98levk1g3g1ht01g5sa">
+                    <td>...3.44.png
+                        <div class="img-box"><img src="http://uimg.top/YIOtj.png?imageView2/2/w/200" alt=""></div>
+                    </td>
+                    <td class="hidden-xs">34 KB</td>
+                    <td>
+                        <div class="detail wrap"><span class="span-text"><strong >访问路径：</strong><a
+                                href="http://uimg.top/YIOtj.png-m"
+                                target="_blank">http://uimg.top/YIOtj.png-m</a></span>
+                            <button class="btn btn-success btn-xs" onclick="copyUrl(this)">复制</button>
+                        </div>
+                    </td>
+                </tr>
                 </tbody>
             </table>
             <div class="instruction">
-                <p><strong>说明:</strong> 路径最后的<mark>-m</mark>后缀表示压缩至最大宽度1024px，高度自适应以节省流量。需要查看原图，删除<mark>-m</mark>访问</p>
+                <p><strong>说明:</strong> 路径最后的
+                    <mark>-m</mark>
+                    后缀表示压缩至最大宽度1024px，高度自适应以节省流量。需要查看原图，删除
+                    <mark>-m</mark>
+                    访问
+                </p>
             </div>
         </div>
     </div>
 
 </div>
-<footer >
-    <p class="text-center sm-text"><small>xm.mrh🍓 </small></p>
+<footer>
+    <p class="text-center sm-text">
+        <small>xm.mrh🍓</small>
+    </p>
 </footer>
 <!--<script src="js/jquery-2.1.4.min.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/moxie.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/plupload.dev.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload.full.min.js" ></script>-->
 <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="http://cdn.staticfile.org/plupload/3.1.0/plupload.min.js" ></script>
+<script type="text/javascript" src="http://cdn.staticfile.org/plupload/3.1.0/plupload.min.js"></script>
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>-->
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.map" ></script>-->
-<script type="text/javascript" src="js/sdk/qiniu.min.js" ></script>
+<script type="text/javascript" src="js/sdk/qiniu.min.js"></script>
 <script type="text/javascript" src="js/base.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/ui.js"></script>
