--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </td>
                     <td class="hidden-xs">34 KB</td>
                     <td>
-                        <div class="detail wrap"><span class="span-text"><strong >访问路径：</strong><a
+                        <div class="detail "><span class="span-text"><strong class="wrap-block">访问路径：</strong><a
                                 href="http://uimg.top/YIOtj.png-m"
                                 target="_blank">http://uimg.top/YIOtj.png-m</a></span>
                             <button class="btn btn-success btn-xs" onclick="copyUrl(this)">复制</button>
