--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="detail "><span class="span-text"><strong class="wrap-block">访问路径：</strong><a
                                 href="http://uimg.top/YIOtj.png-m"
                                 target="_blank">http://uimg.top/YIOtj.png-m</a></span>
-                            <button class="btn btn-success btn-xs" onclick="copyUrl(this)">复制</button>
+                            <button class="btn btn-success btn-xs float-r" onclick="copyUrl(this)">复制</button>
                         </div>
                     </td>
                 </tr>
