--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                 <!--</div>-->
                 <!--</td>-->
                 <!--</tr>-->
-                <tr id="o_1c0o2h25f98levk1g3g1ht01g5sa">
-                    <td>...3.44.png
-                        <div class="img-box"><img src="http://uimg.top/YIOtj.png?imageView2/2/w/200" alt=""></div>
-                    </td>
-                    <td class="hidden-xs">34 KB</td>
-                    <td>
-                        <div class="detail "><span class="span-text"><strong class="wrap-block">访问路径：</strong><a
-                                href="http://uimg.top/YIOtj.png-m"
-                                target="_blank">http://uimg.top/YIOtj.png-m</a></span>
-                            <button class="btn btn-success btn-xs float-r" onclick="copyUrl(this)">复制</button>
-                        </div>
-                    </td>
-                </tr>
+                <!--<tr id="o_1c0o2h25f98levk1g3g1ht01g5sa">-->
+                    <!--<td>...3.44.png-->
+                        <!--<div class="img-box"><img src="http://uimg.top/YIOtj.png?imageView2/2/w/200" alt=""></div>-->
+                    <!--</td>-->
+                    <!--<td class="hidden-xs">34 KB</td>-->
+                    <!--<td>-->
+                        <!--<div class="detail "><span class="span-text"><strong class="wrap-block">访问路径：</strong><a-->
+                                <!--href="http://uimg.top/YIOtj.png-m"-->
+                                <!--target="_blank">http://uimg.top/YIOtj.png-m</a></span>-->
+                            <!--<button class="btn btn-success btn-xs float-r" onclick="copyUrl(this)">复制</button>-->
+                        <!--</div>-->
+                    <!--</td>-->
+                <!--</tr>-->
                 </tbody>
             </table>
             <div class="instruction">
