--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
                 </tbody>
             </table>
             <div class="instruction">
-                <p><strong>说明:</strong> 路径最后的
-                    <mark>-m</mark>
-                    后缀表示压缩至最大宽度1024px，高度自适应以节省流量。需要查看原图，删除
-                    <mark>-m</mark>
-                    访问
+                <p><strong>说明:</strong> 路径最后的<mark>-m</mark>后缀表示压缩至最大宽度1024px，高度自适应以节省流量。需要查看原图，删除<mark>-m</mark>访问
                 </p>
             </div>
         </div>
