--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>图片上传,微信评论留图</title>
+    <title>图片仓库,微信评论留图,永久保存</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/common.css">
@@ -20,7 +20,8 @@
                 </a>
             </div>
             <div class="box set-name">
-                自定义图片名称: <span><span class="slash">/</span><input id="name_id" class="name"/>
+                自定义图片名称: <span><span class="slash">/</span><input id="name_id" class="name" placeholder="可选,默认5位随机数命名"/>
+
             </div>
         </div>
     </div>
