--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </a>
             </div>
             <div class="box set-name">
-                自定义图片名称: <span><span class="slash">/</span><input id="name_id" class="name" placeholder="可选,默认5位随机数命名"/>
-
+                先命名再点上传<br>
+                自定义图片名称: <span><span class="slash">/</span><input id="name_id" class="name" placeholder="可选,默认5位随机数命名"/></span>
             </div>
         </div>
     </div>
