--- a/jmimgup.html
+++ b/jmimgup.html
@@ -23,7 +23,7 @@
                 设置图片前缀路径: <span><span class="slash">/</span><input id="path_id" class="path" type="text"></span>
             </div>
             <div class="box set-name">
-                设置图片名称，后3位采取系统随机数: <span><span class="slash">/</span><input id="name_id" class="name"/>
+                设置图片名称，后3位采取系统随机数: <span><span class="slash">/</span><input id="name_id" class="name"/></span>
             </div>
         </div>
     </div>
