--- a/index.html
+++ b/index.html
@@ -5,22 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>图片仓库,微信评论留图,永久保存</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/commen.css">
+    <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/sdk/qiniu.min.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <link rel="shortcut icon" href="minus.png">
+    <script>
+        function opendel() {
+             $("#btn-id").hide();
+             $("#upload_box").hide();
+             $("#delete_box").show();
+        };
+        var confirmDel = function () {
+            var $key = $("#delete_key");
+            var keyVal = $key.val();
+            if(keyVal.indexOf("imge.top")>-1) {
+                var key = keyVal.substring(keyVal.indexOf("imge.top") + 9, keyVal.length);
+                var formUrl = "http://zzjingmeigzn.com/qiniu/delete.json?uu=" + key;
+
+                $.ajax({
+                    url: formUrl,
+                    type: "GET",
+                    success: function (data) {
+                        $key.val("").attr("placeholder","删除成功，请输入下一个");
+                    },
+                    error: function () {
+
+                    }
+                });
+
+            }
+        }
+    </script>
 </head>
 <body>
 <div class="container-fluid min-height">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
+            <div class="btn-boxs" id="btn-id">
             <div class="upload-box" id="upload_id">
                 <a class="btn btn-default btn-lg" href="#" id="pickfiles">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                     <span>上传图片</span>
                 </a>
             </div>
-            <div class="box set-name">
-                先命名再点上传<br>
+            <a href="javascript:;" onclick="opendel();" class="btn btn-danger btn-lg pull-right"  >
+                <span>删除图片</span>
+            </a>
+            </div>
+            <div class="box set-name" id="upload_box">
+                可自定义命名上传<br>
                 自定义图片名称: <span><span class="slash">/</span><input id="name_id" class="name" placeholder="可选,默认5位随机数命名"/></span>
+            </div>
+            <div class="box set-name del-box" id="delete_box" style="display: none;">
+                输入图片访问地址: <input id="delete_key"  class="pic_url" placeholder=""/>
+                <a href="javascript:;" onclick="confirmDel();"  class="btn btn-success btn-sm "  >
+                    <span>确认删除</span>
+                </a>
             </div>
         </div>
     </div>
@@ -64,13 +106,11 @@
 <!--<script type="text/javascript" src="js/sdk/plupload/moxie.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload/plupload.dev.js" ></script>-->
 <!--<script type="text/javascript" src="js/sdk/plupload.full.min.js" ></script>-->
-<script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.4/jquery.min.js"></script>
+
 <script type="text/javascript" src="http://cdn.staticfile.org/plupload/3.1.0/plupload.min.js"></script>
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js" ></script>-->
 <!--<script type="text/javascript" src="http://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.map" ></script>-->
-<script type="text/javascript" src="js/sdk/qiniu.min.js"></script>
-<script type="text/javascript" src="js/base.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
+
 <script type="text/javascript" src="js/ui.js"></script>
 
 </body>
